--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -68,8 +68,8 @@
                                 {% endif %}
                                 <br>
                                 <div style="float: right">
-                                    <button type="submit" class="btn me-2" style="background-color:darkorange; color:White">회원가입</button>
-                                    <a href="{% url 'login' %}" class="btn btn-secondary">로그인 페이지로</a>
+                                    <button type="submit" class="btn me-2 btn_org">회원가입</button>
+                                    <a href="{% url 'login' %}" class="btn me-2 btn_gr">로그인 페이지로</a>
                                 </div>
                             </form>
                         </form>
