--- a/templates/post/update.html
+++ b/templates/post/update.html
@@ -34,8 +34,8 @@
                         </div>
                     {% endif %}
                     <div style="float: right">
-                    <button type="submit" class="btn btn-primary">등록하기</button>
-                    <a href="/" class="btn btn-secondary">취소하기</a>
+                    <button type="submit" class="btn me-2 btn_org">등록하기</button>
+                    <a href="/" class="btn me-2 btn_gr">취소하기</a>
                 </div>
             </form>
         </div>
