--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,7 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://file.notion.so/f/s/bdbe0771-ce9d-456e-b4f5-5710620b8381/Untitled.jpeg?id=1c0d6939-9470-4897-a6c3-8226f9dfe574&table=block&spaceId=24c771f9-c044-4d63-851f-660172d58cb7&expirationTimestamp=1681448996871&signature=H5osHcjua4X2w0egBKdjh9YwNVkvGpzHX4VaqFBTwJA&downloadName=Untitled.jpeg);
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://file.notion.so/f/s/bdbe0771-ce9d-456e-b4f5-5710620b8381/Untitled.jpeg?id=1c0d6939-9470-4897-a6c3-8226f9dfe574&table=block&spaceId=24c771f9-c044-4d63-851f-660172d58cb7&expirationTimestamp=1681538216174&signature=kwnZlfhp1Zzg3e9M15bn8E0xaNP1_72MHhfWc_ezUNo&downloadName=Untitled.jpeg);
     background-position: center;
     background-size: cover;
 }
@@ -41,6 +41,21 @@ h1 {
 
 }
 
+.btn_profile {
+    background-color: tomato;
+
+}
+
+.btn_org {
+    background-color: darkorange !important;
+    color: white !important;
+}
+
+.btn_gr {
+    background-color: gray !important;
+    color: white !important;
+}
+
 .mycards {
 
     width: 100%;
@@ -56,7 +71,6 @@ h1 {
     gap: 20px;
     /* 카드 간격 조절 */
 }
-
 
 .pagination .page-link {
     background-color: white;
@@ -81,10 +95,14 @@ h1 {
 }
 
 .wrap {
-    width: 400px;
+    width: 500px;
     margin: 0 auto;
     margin-top: 50px;
     margin-bottom: 200px;
+}
+
+.wrap>img {
+    width: 100%;
 }
 
 footer {
