--- a/templates/base.html
+++ b/templates/base.html
@@ -12,141 +12,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
-    <!-- <link href ="{% static 'css/style.css' %}" rel="stylesheet"> -->
-    <style>
-        @font-face {
-            font-family: 'establishRoomNo703OTF';
-            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2112@1.0/establishRoomNo703OTF.woff') format('woff');
-            font-weight: normal;
-            font-style: normal;
-        }
-        h1 {
-            font-family: 'establishRoomNo703OTF';
-        }
-        .col-lg-6 {
-            width:85%;
-            margin-bottom: 50px;
-        }
-        .main {
-            background-color: green;
-            color: white;
-            height: 600px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://file.notion.so/f/s/bdbe0771-ce9d-456e-b4f5-5710620b8381/Untitled.jpeg?id=1c0d6939-9470-4897-a6c3-8226f9dfe574&table=block&spaceId=24c771f9-c044-4d63-851f-660172d58cb7&expirationTimestamp=1681448996871&signature=H5osHcjua4X2w0egBKdjh9YwNVkvGpzHX4VaqFBTwJA&downloadName=Untitled.jpeg);
-            background-position: center;
-            background-size: cover;
-        }
-        h1 { font-size:50px;
-        margin-bottom: 20px;}
-        #profile_card {
-            width: 100%;
-        }
-        .btn_profile {
-            background-color: tomato;
-
-        }
-
-        .btn_org {
-            background-color: darkorange !important;
-            color: white !important;
-        }
-
-        .btn_gr {
-            background-color: gray !important;
-            color: white !important;
-        }
-
-        .mycards {
-
-        width: 100%;
-        margin: 150px auto 80px auto;
-
-        }
-
-        .card .h-100 {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        width: 250px;
-        gap: 20px; /* 카드 간격 조절 */
-        }
-
-
-        .pagination .page-link {
-            background-color: white;
-            color: black;
-        }
-
-        .pagination .page-item.disabled .page-link {
-            background-color: white;
-            color: black;
-        }
-
-        .pagination .page-item.active .page-link {
-            background-color: lightgray;
-            border: solid darkgray 1px;
-            color: black;
-        }
-
-        .col-lg-4 {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-        }
-
-        .wrap {
-            width: 400px;
-            margin: 0 auto;
-            margin-top: 50px;
-            margin-bottom: 200px;
-        }
-
-        footer {
-            background-color: lightgray;
-            margin-bottom: 0px;
-            width: 100%;
-        }
-
-        a {
-            text-decoration: none;
-            color: white;
-        }
-
-        header {
-
-            z-index: 999;
-        }
-
-        .col.mb-5:hover {
-
-            transform:scale(1.1);
-            transition: transform 0.3s ease-in-out;
-        }
-       
-      .mypage_body {
-        width: 100%;
-        margin: 0 auto;
-        /* font-family: sans-serif; */
-        font-size: 18px;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        line-height: 1.5;
-        padding: 20px;
-      }
-
-    </style>
-
+    <link href ="{% static 'css/style.css' %}" rel="stylesheet">
 </head>
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container px-4 px-lg-5">
 <!-- {#        <--!타이틀-->#} -->
-    <a href="/"><img src="https://file.notion.so/f/s/60c8981a-2e30-409a-8b9f-439580f0d215/Untitled.png?id=b3ad29f0-0075-4bd7-bd20-06adb10edebd&table=block&spaceId=24c771f9-c044-4d63-851f-660172d58cb7&expirationTimestamp=1681440285377&signature=xp7oPlJZe8-3j6R3WSN2WtbrAT33KsFCJqGVzpCga5k&downloadName=Untitled.png"
+    <a href="/"><img src="https://file.notion.so/f/s/60c8981a-2e30-409a-8b9f-439580f0d215/Untitled.png?id=b3ad29f0-0075-4bd7-bd20-06adb10edebd&table=block&spaceId=24c771f9-c044-4d63-851f-660172d58cb7&expirationTimestamp=1681538256815&signature=rmA0MihT3BEptwnPKm7JNnQFqnHlCwoOkG_ySh3L-Kg&downloadName=Untitled.png"
                  alt="상단로고" width="70"></a>
         <a class="navbar-brand" href="/">친한사2조</a>
         {% if  user.is_authenticated %}
@@ -210,18 +83,17 @@
         <div class="container">
             <div class="jumbotron text-center mt-5 mb-0">
                 <div class="mem_list">
-                    <p class="m-0 text-center text-white">박진식 <a href="https://velog.io/@dkdnl369">BLOG</a>
-                    <p class="m-0 text-center text-white">김근혜 <a href="https://sw-ing.tistory.com">BLOG</a>
-                    <p class="m-0 text-center text-white">김민경 <a href="https://velog.io/@plumeriaa">BLOG</a>
-                    <p class="m-0 text-center text-white">정승호 <a href="https://teapackage.tistory.com/">BLOG</a>
+                    <p class="m-0 text-center text-white">박진식 <a href="https://velog.io/@dkdnl369">BLOG</a></p>
+                    <p class="m-0 text-center text-white">김근혜 <a href="https://sw-ing.tistory.com">BLOG</a></p>
+                    <p class="m-0 text-center text-white">김민경 <a href="https://velog.io/@plumeriaa">BLOG</a></p>
+                    <p class="m-0 text-center text-white">정승호 <a href="https://teapackage.tistory.com/">BLOG</a></p>
                     <p class="m-0 text-center text-white">박소진 <a
-                            href="https://right-otter-1b4.notion.site/Sparta-f505fc85ac5145fe9104a6e2abef444d">BLOG</a>
-                    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+                            href="https://right-otter-1b4.notion.site/Sparta-f505fc85ac5145fe9104a6e2abef444d">BLOG</a></p><br>
+                    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
+                </div>
             </div>
         </div>
     </footer>
-</div>
-
+</div>    
 </body>
-
-</html>
+</html>        
