--- a/templates/account/profile_edit.html
+++ b/templates/account/profile_edit.html
@@ -1,16 +1,24 @@
 {% extends 'base.html' %}
 {% block content %}
-<form method="post">
+<form method="post" action="{% url 'profile_edit' %}" enctype="multipart/form-data">
   {% csrf_token %}
-  <div style="display: flex; flex-direction: column; width: 100%; margin: 0 auto;">
-    <label for="{{ form.name.id_for_label }}">이름:</label>
-    {{ form.name }}
-    <label for="{{ form.location.id_for_label }}">지역:</label>
-    {{ form.location }}
-    <label for="{{ form.email.id_for_label }}">이메일:</label>
-    {{ form.email }}
-    <label for="{{ form.content.id_for_label }}">내용:</label>
-    {{ form.content }}
+  <div style="display: flex; flex-direction: column; width: 50%; margin: 0 auto; margin-top: 50px; margin-bottom: 50px;">
+    <div class="form-group mt-2 mb-2">
+      <label for="username">이름:</label>
+      <input type="text" class="form-control" name="name" value="{{user.username}}">
+    </div>
+    <div class="form-group mt-2 mb-2">
+      <label for="username">번호:</label>
+      <input type="text" class="form-control" name="number" value="{{user.phone}}">
+    </div>
+    <div class="form-group mt-2 mb-2">
+      <label for="username">이메일:</label>
+      <input type="email" class="form-control" name="email" value="{{user.email}}">
+    </div>
+    <div class="form-group mt-2 mb-2">
+      <label for="username">내용:</label>
+      <input type="text" class="form-control" name="bio" value="{{user.bio}}">
+    </div>
     <button type="submit" class="btn me-2 btn_org" style="margin-top: 10px;">저장</button>
   </div>
 </form>
