--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,8 +5,28 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'S-CoreDream-3Light';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+* {
+    font-family: 'S-CoreDream-3Light';
+}
+
+.mt-5 {
+    font-family: 'establishRoomNo703OTF' !important;
+}
+
+.vh-100 {
+    height: calc(100vh - 70px) !important;
+}
+
 h1 {
-    font-family: 'establishRoomNo703OTF';
+    font-size: 50px;
+    margin-bottom: 20px;
 }
 
 .col-lg-6 {
@@ -25,11 +45,6 @@ h1 {
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://file.notion.so/f/s/bdbe0771-ce9d-456e-b4f5-5710620b8381/Untitled.jpeg?id=1c0d6939-9470-4897-a6c3-8226f9dfe574&table=block&spaceId=24c771f9-c044-4d63-851f-660172d58cb7&expirationTimestamp=1681538216174&signature=kwnZlfhp1Zzg3e9M15bn8E0xaNP1_72MHhfWc_ezUNo&downloadName=Untitled.jpeg);
     background-position: center;
     background-size: cover;
-}
-
-h1 {
-    font-size: 50px;
-    margin-bottom: 20px;
 }
 
 #profile_card {
@@ -105,11 +120,6 @@ h1 {
     width: 100%;
 }
 
-footer {
-    background-color: lightgray;
-    margin-bottom: 0px;
-    width: 100%;
-}
 
 a {
     text-decoration: none;
