--- a/templates/account/profile_edit.html
+++ b/templates/account/profile_edit.html
@@ -1,25 +1,30 @@
 {% extends 'base.html' %}
 {% block content %}
-<form method="post" action="{% url 'profile_edit' %}" enctype="multipart/form-data">
-  {% csrf_token %}
-  <div style="display: flex; flex-direction: column; width: 50%; margin: 0 auto; margin-top: 50px; margin-bottom: 50px;">
-    <div class="form-group mt-2 mb-2">
-      <label for="username">이름:</label>
-      <input type="text" class="form-control" name="name" value="{{user.username}}">
+<div class="wrap_content">
+  <form method="post" action="{% url 'profile_edit' %}" enctype="multipart/form-data">
+    {% csrf_token %}
+    <div style="display: flex; flex-direction: column; width: 500px; margin: 0 auto; margin-top: 50px; margin-bottom: 50px;">
+      <div class="form-group mt-2 mb-2">
+        <label for="username">이름:</label>
+        <input type="text" class="form-control" name="name" value="{{user.username}}">
+      </div>
+      <div class="form-group mt-2 mb-2">
+        <label for="username">번호:</label>
+        <input type="text" class="form-control" name="number" value="{{user.phone}}">
+      </div>
+      <div class="form-group mt-2 mb-2">
+        <label for="username">이메일:</label>
+        <input type="email" class="form-control" name="email" value="{{user.email}}">
+      </div>
+      <div class="form-group mt-2 mb-2">
+        <label for="username">내용:</label>
+        <input type="text" class="form-control" name="bio" value="{{user.bio}}">
+      </div>
+      <button type="submit" class="btn me-2 btn_org" style="margin-top: 10px;">저장</button>
     </div>
-    <div class="form-group mt-2 mb-2">
-      <label for="username">번호:</label>
-      <input type="text" class="form-control" name="number" value="{{user.phone}}">
-    </div>
-    <div class="form-group mt-2 mb-2">
-      <label for="username">이메일:</label>
-      <input type="email" class="form-control" name="email" value="{{user.email}}">
-    </div>
-    <div class="form-group mt-2 mb-2">
-      <label for="username">내용:</label>
-      <input type="text" class="form-control" name="bio" value="{{user.bio}}">
-    </div>
-    <button type="submit" class="btn me-2 btn_org" style="margin-top: 10px;">저장</button>
-  </div>
-</form>
+  </form>
+</div>
+<style>
+  footer {display:none}
+</style>
 {% endblock %}
