--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,8 @@
     <div class="container px-4 px-lg-5">
 <!-- {#        <--!타이틀-->#} -->
     <a href="/"><img src="https://file.notion.so/f/s/60c8981a-2e30-409a-8b9f-439580f0d215/Untitled.png?id=b3ad29f0-0075-4bd7-bd20-06adb10edebd&table=block&spaceId=24c771f9-c044-4d63-851f-660172d58cb7&expirationTimestamp=1681538256815&signature=rmA0MihT3BEptwnPKm7JNnQFqnHlCwoOkG_ySh3L-Kg&downloadName=Untitled.png"
-                 alt="상단로고" width="70"></a>
-        <a class="navbar-brand" href="/">친한사2조</a>
+                 alt="상단로고" width="70" height="70"></a>
+        <a class="navbar-brand" href="/" style="font-size: 25px;">친한사2조</a>
         {% if  user.is_authenticated %}
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
