--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -48,13 +48,13 @@
                                 <label for="user_address">지역</label>
                                 <select class="form-select" id="user_address" name="user_address">
                                     <option selected>-----</option>
-                                    <option value="1">서울</option>
-                                    <option value="2">경기도</option>
-                                    <option value="3">강원도</option>
-                                    <option value="4">충청도</option>
-                                    <option value="5">전라도</option>
-                                    <option value="6">경상도</option>
-                                    <option value="7">제주도</option>
+                                    <option value="서울">서울</option>
+                                    <option value="경기도">경기도</option>
+                                    <option value="강원도">강원도</option>
+                                    <option value="충청도">충청도</option>
+                                    <option value="전라도">전라도</option>
+                                    <option value="경상도">경상도</option>
+                                    <option value="제주도">제주도</option>
                                 </select>
                                 <div class="form-group mt-2 mb-2">
                                     <i class="material-icons" style="font-size:24px">chat_bubble</i>
