--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,7 +42,7 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://file.notion.so/f/s/bdbe0771-ce9d-456e-b4f5-5710620b8381/Untitled.jpeg?id=1c0d6939-9470-4897-a6c3-8226f9dfe574&table=block&spaceId=24c771f9-c044-4d63-851f-660172d58cb7&expirationTimestamp=1681538216174&signature=kwnZlfhp1Zzg3e9M15bn8E0xaNP1_72MHhfWc_ezUNo&downloadName=Untitled.jpeg);
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/image/Food_image.jpeg");
     background-position: center;
     background-size: cover;
 }
