--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -81,7 +81,7 @@
                                     </div>
                                     <!-- 보러가기 버튼-->
                                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'post' id=post.id %}">보러가기</a></div>
+                                        <div class="text-center"><a class="btn me-2 btn_org" href="{% url 'post' id=post.id %}">보러가기</a></div>
                                     </div>
                                 </div>
                             </div>
