--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container px-4 px-lg-5">
 <!-- {#        <--!타이틀-->#} -->
-    <a href="/"><img src="https://file.notion.so/f/s/60c8981a-2e30-409a-8b9f-439580f0d215/Untitled.png?id=b3ad29f0-0075-4bd7-bd20-06adb10edebd&table=block&spaceId=24c771f9-c044-4d63-851f-660172d58cb7&expirationTimestamp=1681538256815&signature=rmA0MihT3BEptwnPKm7JNnQFqnHlCwoOkG_ySh3L-Kg&downloadName=Untitled.png"
+    <a href="/"><img src="{% static 'image/logo.png' %}"
                  alt="상단로고" width="70" height="70"></a>
         <a class="navbar-brand" href="/" style="font-size: 25px;">친한사2조</a>
         {% if  user.is_authenticated %}
