--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container px-4 px-lg-5">
 <!-- {#        <--!타이틀-->#} -->
-    <a href="/"><img src="{% static 'image/logo.png' %}"
+    <a href="/"><img src="{% static 'image/B2_yam.png' %}"
                  alt="상단로고" width="70" height="70"></a>
         <a class="navbar-brand" href="/" style="font-size: 25px;">친한사2조</a>
         {% if  user.is_authenticated %}
